add 'descriptive stats' section at the end of all main Rmd reports so that some basic summaries are easily accessible while writing the manuscript

--- a/beleyur_et_al_silk_analyses.Rmd
+++ b/beleyur_et_al_silk_analyses.Rmd
@@ -285,6 +285,15 @@ print(overall_silk$ANOVA.test)
 
 ```
 
+### Other general descriptive statistics in the paper
+
+#### Number of replicates per group size
+
+```{r, echo=TRUE}
+wd1<-subset(wd, day==1)
+table(wd1$groupsize)
+```
+
 ### The R packages and R version required to run this analysis 
 
 ```{r}
