--- a/lmm-spider-silk.Rmd
+++ b/lmm-spider-silk.Rmd
@@ -1,28 +1,37 @@
 ---
 title: "LMM analysis of spider silk investment"
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
 ---
+
 This notebook will present the results of *all* days' data. Here we will use a linear-mixed model to analyse the repeated measurements of per-capita silk investment. 
 
-```{r loadingD, echo=TRUE,include=FALSE}
+```{r loadingD, echo=FALSE, results=FALSE}
 library(arm)
 library(coda)
 library(gplots)
+library(ggplot2)
 library(lme4)
+library(rstanarm)
+library(shinystan)
 load('dlenth.Rdata')
 load('wd.Rdata')
 
-dlenth <- subset(dlenth, day<=7)
+set.seed(82319)
+#dlenth <- subset(dlenth)
 get.hpdintervals <- function(x,probrange){HPDinterval(as.mcmc(x, prob=probrange))}
-
+get.prob.negative <- function(x){mean(x<0)}
 dlenth.nona <- dlenth[!is.na(dlenth$percap),]
 
 ```
 
-```{r lmmmodel1}
-model1 <- lmer(percap~groupsize+day-1+(1|colonyname), data=dlenth.nona)
-# diagnose the model fit 
+Having loaded the necessary packages and data, let's proceed to run the linear-mixed models.
 
+```{r lmm1}
+model1 <- lmer(percap~groupsize+day+(1|colonyname), data=dlenth.nona)
+# diagnose the model fit 
+frame()
 par(mfrow=c(1,3))
 # qqplot 
 qqnorm(resid(model1));qqline(resid(model1))
@@ -30,27 +39,35 @@ qqnorm(resid(model1));qqline(resid(model1))
 boxplot(resid(model1)~groupsize, data=dlenth.nona)
 # residuals vs day 
 boxplot(resid(model1)~day, data=dlenth.nona)
-
 ```
+
 The residuals seem to be mostly normally distributed, and evenly spread cross time and group sizes. 
 
 ```{r posteriordistbn}
+# generate posterior distribution of the coefficients in the model 
 model1.sim <- sim(model1, n.sim=5000)
 
 # get the fixed effects HPD and compare them across group sizes:
 fixedefs1.hpd <- apply(model1.sim@fixef,2,get.hpdintervals,probrange=0.93)
 fixedefs1.mean <- apply(model1.sim@fixef,2,mean)
-fixedefs1.all <- rbind(fixedefs1.hpd[1,],fixedefs1.mean, fixedefs1.hpd[2,])
+fixedefs1.all <- round(rbind(fixedefs1.hpd[1,],fixedefs1.mean, fixedefs1.hpd[2,]),2)
 
+# display the 93% compatibility interval (lower, mean, upper) for the fixed effects 
+print(fixedefs1.all)
 ```
 
+The results suggest that per-capita silk investment may decrease or increase slightly with group size between -5 to 1 cm/spider. Overall, the probability that per-capita silk decreases with group size is `r mean(model1.sim@fixef[,2]<0)`. The effect of time is relatively small, with a decrease of between -9 to 3 cm. The overall probability that the silk investment decreases with day is `r mean(model1.sim@fixef[,3]<0)`. 
 
-```{r model2}
+### approach 2
+Let's also take an alternative approach, and estimate the per-capita silk investment across group sizes. We'll treat the group sizes as factors, and thus be able to estimate group-size specific
+
+```{r model2, warning=FALSE}
 # this is model1 but with group size as  factor for easier comparison
 dlenth.nona$groupsizefactor <- as.factor(dlenth.nona$groupsize)
-model2 <- lmer(percap~groupsizefactor-1+day+(1|colonyname), data=dlenth.nona)
+model2 <- lmer(percap~groupsizefactor+day+(1|colonyname), data=dlenth.nona)
 # diagnose the model fit 
 
+frame()
 par(mfrow=c(1,3))
 # qqplot 
 qqnorm(resid(model2));qqline(resid(model2))
@@ -60,18 +77,98 @@ boxplot(resid(model2)~groupsize, data=dlenth.nona)
 boxplot(resid(model2)~day, data=dlenth.nona)
 
 ```
-```{r model2sim}
+
+
+
+
+```{r model2sim, warning=FALSE}
 model2.sim <- sim(model2, n.sim=5000)
 
 # calculate relative effects:
-rel.effects <- cbind(model2.sim@fixef[,2],model2.sim@fixef[,3],model2.sim@fixef[,4])/model2.sim@fixef[,1]
+#rel.effects <- cbind(model2.sim@fixef[,2],model2.sim@fixef[,3],model2.sim@fixef[,4])/model2.sim@fixef[,1]
 
 # get the fixed effects HPD and compare them across group sizes:
 fixedefs2.hpd <- apply(model2.sim@fixef,2,get.hpdintervals,probrange=0.93)
 fixedefs2.mean <- apply(model2.sim@fixef,2,mean)
-fixedefs2.all <- rbind(fixedefs2.hpd[1,],fixedefs2.mean,fixedefs2.hpd[2,])
+fixedefs2.all <- round(rbind(fixedefs2.hpd[1,],fixedefs2.mean,fixedefs2.hpd[2,]),2)
 
-plotCI(x=seq(1,4),y=fixedefs2.mean[1:4], ui=fixedefs2.hpd[2,1:4],li=fixedefs2.hpd[1,1:4],ylab='Estimated per-capita silk investment (a.u.)', xaxt='n', xlab='Group size')
-axis(1, at = seq(1,4), labels=c(1,5,10,25),las=1)
+print(fixedefs2.all)
+
 ```
-The 93% compatibility intervals for estimated per-capita silk investment for all group sizes show overlap. 
+The intercept estimates the per-capita silk investment of group size 1, while all other factors indicate the additional increase/decrease from group size 1. Here, we see that there may be an overall decrease in silk investment tht is actually dependent on group size. The probability that silk investment is less than that of single spiders for group sizes 5,10,25 are: `r round(apply(model2.sim@fixef,2,get.prob.negative)[2:4],2)`.
+
+
+```{r model3}
+model3 <- lmer(percap ~ groupsize + day + (day|colonyname), data=dlenth.nona)
+
+frame()
+par(mfrow=c(1,3))
+# qqplot 
+qqnorm(resid(model3));qqline(resid(model3))
+# residuals vs group size
+boxplot(resid(model3)~groupsize, data=dlenth.nona)
+# residuals vs day 
+boxplot(resid(model3)~day, data=dlenth.nona)
+```
+
+
+### Comparing the raw data and predictions 
+
+```{r predictmodel1}
+model1.fixefs.sim <- fixef(model1.sim)
+pred.df <- as.data.frame(dlenth.nona)
+
+pred.df$preds.fixef <- mean(model1.fixefs.sim[1,1]) + pred.df$groupsize*mean(model1.fixefs.sim[1,2])+pred.df$day*mean(model1.fixefs.sim[1,3])
+
+#color=as.factor(colonyname),group=as.factor(colonyname)scale_x_discrete(breaks=c(1:9),labels=c(1:9))
+dg2<-ggplot(subset(pred.df,groupsize==10))+geom_line(aes(x=day,y=preds.fixef,color=as.factor(groupsize),group=as.factor(groupsize)))+ylab('')+xlab('Days')+geom_point(aes(x=day,y=percap,position='jitter',color=as.factor(groupsize)))
+dg2
+```
+
+
+## with Rstand
+```{r rstandmodel}
+model4 <- stan_glmer(percap~groupsize+day+I(day^2)+(day|colonyname), data=dlenth.nona)
+
+preds.model4 <- posterior_predict(model4, re.form=~(day|colonyname))
+mean.post.pred <- apply(preds.model4,2,mean)
+preds4 <- cbind(dlenth.nona,mean.post.pred)
+colnames(preds4)[ncol(preds4)] <- 'onepred'
+preds410 <- subset(preds4, groupsize==5)
+```
+
+```{r plotpreds}
+
+raw.and.pred1 <- ggplot(subset(preds4,groupsize==25)) + geom_line(aes(x=day,y=onepred,color=as.factor(colonyname),group=as.factor(colonyname)),lwd=1.5,alpha=0.8)+ylab('')+xlab('Days')+geom_point(aes(x=day,y=percap,color=as.factor(colonyname)))+geom_line(aes(x=day,y=percap,color=as.factor(colonyname),group=as.factor(colonyname)),)
+raw.and.pred1
+
+raw.and.pred5 <- ggplot(subset(preds4,groupsize==5)) + geom_line(aes(x=day,y=onepred,color=as.factor(groupsize),group=as.factor(colonyname)))+ylab('')+xlab('Days')+geom_point(aes(x=day,y=onepred,color=as.factor(groupsize)))
+raw.and.pred5
+
+```
+The predictions are actually quite crap....guh.
+
+
+```{r wholewebdata}
+wd$groupsizefactor <- as.factor(wd$groupsize)
+silkmodel1 <- lmer(Lengthm~groupsizefactor+day+I(day^2)+(day|colonyname), data=wd)
+silkmodel1sim <- sim(silkmodel1, n.sim=2000)
+fix.silkmodel1 <- fixef(silkmodel1sim)
+relative.coefs <- fix.silkmodel1[,1]+fix.silkmodel1[,2:4]/fix.silkmodel1[,1]
+relative.coefs.hpd <- apply(relative.coefs,2,get.hpdintervals,probrange=0.93)
+silkmodel1.hpd.coefs <- apply(fixef(silkmodel1sim),2,get.hpdintervals,probrange=0.93)
+
+par(mfrow=c(1,3))
+# qqplot 
+qqnorm(resid(silkmodel1));qqline(resid(silkmodel1))
+# residuals vs group size
+boxplot(resid(silkmodel1)~groupsize, data=wd)
+# residuals vs day 
+boxplot(resid(silkmodel1)~day, data=wd)
+
+# predict
+wd$preds <- predict(silkmodel1)
+ggplot(wd)+geom_line(aes(x=day, y=preds, color=as.factor(groupsize),group=as.factor(colonyname)),lwd=1.25,alpha=0.8)+geom_point(aes(x=day, y=Lengthm, color=as.factor(groupsize),group=as.factor(groupsize)))+geom_line(aes(x=day, y=Lengthm, color=as.factor(groupsize),group=as.factor(colonyname)))
+```
+
+
